--- a/index.html
+++ b/index.html
@@ -10,20 +10,59 @@
     <link rel="stylesheet" href="css/myPage.css">
     <script src="js/jquery.min.js"></script>
     <!-- jquery.easings.min.js 是必须的，用于 easing 参数，也可以使用完整的 jQuery UI 代替 -->
-    <script src="js/jquery.easings.1.3.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/jquery.fullPage.min.js"></script>
     <script src="js/myPage.js"></script>
 </head>
 <body>
     <div id="fullpage">
+        <!-- 第一屏开始 -->
         <div class="section section1">
             <img src="images/t1wsqsfgnaxxxmjxp6-470-50.png" class="fly updown" alt="">
             <img src="images/t1xccqfflgxxxild.png" class="shirt01 shirt-updown" alt="">
             <img src="images/t1iakufbxxxxctz4tl-824-274.png" class="goods" alt="">
         </div>
-        <div class="section section2">第二屏</div>
-        <div class="section section3">第三屏</div>
-        <div class="section section4">第四屏</div>
+        <!-- 第一屏结束 -->
+        <!-- 第二屏开始 -->
+        <div class="section section2">
+            <img src="images/words-01-361-25.png" class="words-01" alt="">
+            <img src="images/words-02.png" class="words-02" alt="">
+            <div class="computer">
+                <div class="search">
+                   <img src="images/search-words.png" class="search-words" alt="">  
+                </div>
+                <img src="images/search-02-1.png" class="search-02-1" alt="">
+                <img src="images/goods-441-218.png" class="goods-02" alt="">
+                <img src="images/shirt-02-207-166.png" class="shirt-02" alt="">
+                <div class="cover"></div>
+            </div>
+        </div>
+        <!-- 第二屏结束 -->
+        <!-- 第三屏开始 -->
+        <div class="section section3">
+            <div class="main">
+                <div class="select">
+                    <img src="images/img-01.gif" class="img" alt="">
+                    <img src="images/img-01-a.gif" class="img img-01-a" alt="">
+                    <img src="images/btn-01.gif" class="btn" alt="">
+                    <img src="images/btn-01-a.gif" class="btn btn-01-a" alt="">
+                </div>
+                <img src="images/shirt-02-207-166.png" class="shirt-03" alt="">
+                <img src="images/t1f.png" class="t1f" alt="">
+            </div>
+        </div>
+        <!-- 第三屏结束 -->
+        <!-- 第四屏开始 -->
+        <div class="section section4">
+            <img src="images/cloud.png" class="cloud cloud-back1" alt="">
+            <img src="images/words-04.png" class="word" alt="">
+            <img src="images/words-04-a.png" class="word words-04-a" alt="">
+            <div class="car">
+                <img src="images/t1f.png" class="car-img" alt="">
+                <img src="images/car.png" alt="">
+            </div>
+        </div>
+        <!-- 第四屏结束 -->
         <div class="section section5">第五屏</div>
         <div class="section section6">第六屏</div>
         <div class="section section7">第七屏</div>
